# xyz-microservices

./: README.md  pyproject.toml
.github/workflows/: ci.yml
infra/cdk/: README.md  quickstart.sh  xyz_orders_stack.py
references/: README.md
references/infra/cdk/: README.md  app.py  cdk.json
references/infra/cdk/stacks/: full_stack.py
references/infra/terraform/: README.md  ecs.tf  messaging.tf  network.tf  outputs.tf  variables.tf
references/services/orders_service/: openapi.yaml
services/orders_service/: Dockerfile
services/orders_service/app/: main.py  publisher.py
services/orders_service/tests/integration/: test_publish_order_created.py
services/orders_service/tests/unit/: test_domain.py
tests/e2e/: test_order_to_payment_flow.py
