[project]
name = "xyz-microservices"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "tenacity>=9.0",
  "testcontainers[rabbitmq]>=4.7.0",
  "pydantic>=2.7",
]

[tool.pytest.ini_options]
testpaths = ["services", "tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.coverage.run]
branch = true
source = ["services"]

[tool.setuptools.packages.find]
include = ["services*", "references*"]
# or exclude unwanted directories
exclude = ["tests*", "docs*"]
