[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xyz-microservices"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pika>=1.3.0",
  "uvicorn>=0.27.0",
  "fastapi>=0.109.0",
  "pydantic>=2.7",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "tenacity>=9.0",
  "testcontainers[rabbitmq]>=4.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["services", "tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.coverage.run]
branch = true
source = ["services"]

[tool.setuptools.packages.find]
include = ["services*", "references*"]
exclude = ["tests*", "docs*"]

